force-app/main/default/objects/TestShipment__c/TestShipment__c.object-meta.xml
<CustomObject>
    <label>Test Shipment</label>
    <nameField>
        <label>Test Shipment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Shipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>