force-app/main/default/objects/TestShipment__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Air</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Sea</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Truck</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Warehouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>